[gd_scene load_steps=5 format=3 uid="uid://cf8q2ceyjr4aa"]

[ext_resource type="Script" uid="uid://doaw0cxx2f61c" path="res://scripts/event/event.gd" id="1_wi3ac"]
[ext_resource type="Texture2D" uid="uid://ber1sw04xxcjp" path="res://art/burst.png" id="2_ruury"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mri8j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_civpy"]
radius = 5.0

[node name="Event" type="Node2D"]
script = ExtResource("1_wi3ac")

[node name="EventArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventArea"]
material = SubResource("CanvasItemMaterial_mri8j")
shape = SubResource("CircleShape2D_civpy")
debug_color = Color(0.822454, 0.286281, 0.708609, 0.42)

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ruury")

[connection signal="body_entered" from="EventArea" to="." method="_on_event_area_body_entered"]
[connection signal="body_exited" from="EventArea" to="." method="_on_event_area_body_exited"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
